--- a/大專/text.css
+++ b/大專/text.css
@@ -3,15 +3,22 @@
   padding: 0;
   box-sizing: border-box; 
 }
-body{
-  background-color:#ffffff;
-}
 /* 導覽列 */
 .main-header{
-  position:sticky;
+  position:fixed;
   top: 0px;
   width: 100%;
-  z-index: 1;/* 將導覽列的層級設為1就不會被輪播圖覆蓋 */
+  z-index: 999;/* 將導覽列的層級 */
+}
+.container{
+  display: flex;/* 並排 */
+  padding: 5px;
+  padding-right: 0px;
+  max-width: 100%;
+  margin: auto;/* 將覽導列自動放到正中間 */
+  align-items: center;/* 容器內所有項目對齊中間 */
+  background-color: rgba(130, 130, 130, 0.8);/* 導覽列透明0~1之間 */
+  text-shadow: 0px 0px 1px #ffffff;/* 文字外框 */
 }
 .main-header .Logo{
   width: 50px;
@@ -26,98 +33,72 @@ body{
 .Logo h2{
   margin-left: 5px;
   font-size: 2em;
-  color: #000000;
+  color: #ffffff;
   text-shadow: 2px 0px 0px #f6a122;/* 文字外框 */
 }
-.container{
-  display: flex;/* 並排 */
-  padding: 20px;
-  max-width: 100%;
-  margin: auto;/* 將覽導列自動放到正中間 */
-  align-items: center;/* 容器內所有項目對齊中間 */
-  background-color: rgba(222, 222, 222, 0.4);/* 導覽列透明0~1之間 */
-  text-shadow: 0px 0px 1px #ffffff;/* 文字外框 */
-}
-.navbar{
+
+.navbar-text{
   margin: auto;/* 把空間分配給類別內的值 */
-  font-size: 20px;
-  font-weight: bold;/* 粗體文字 */
-  
+  font-size: 24px;
+  font-family: 'Noto Sans JP', sans-serif;/* 預設樣式中文字 */
 }
-.navbar a{
+
+.navbar-text a{
+  border-radius: 20px;/* 邊框圓弧度 */
+  text-shadow: 1px 1px 0 rgb(4, 4, 4); /* 设置文字陰影，颜色為红色，水平偏移量為 1 像素，垂直偏移量為 1 像素 */
   text-decoration: none;/* 連結去底線 */
   padding-left: 30px;/* 連結的左邊空間+30px */
   padding-right: 30px;/* 連結的右邊空間+30px */
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
 }
-.navbar a:hover{
-  border-bottom:5px solid #FFDEAD;
+.navbar-text a:hover{
+  border: 1px solid #ffe2d3cb; /* 設置邊框為 1 像素實線黑色 */
+  background-color: rgb(147, 147, 147);
+  color: #ffffff;
 }
-.container ul{
-  list-style-type: none;/* 去標記點 */
+.navbar-nav{
+  margin-right: 70px;
+}
+
+/* 個人資料 */
+.container-PI{
+  background-color: #f6a122;
+  position: relative;/* 父元素 */
+  justify-content: center;/* 水平置中 */
+  align-items: center;/* 垂直置中 */
   display: flex;
-  margin-bottom: 0;
+  height: 100vh; /* 也可以使用固定高度 */
 }
-.container ul li{
-  margin: 10px;
+.PI{
+  position: absolute;/* 子元素 */
+  width: 1800px;
+  height: 700px;
+  justify-content: center;/* 水平置中 */
+  align-items: center;/* 垂直置中 */
+  
+  background-color: #ffffff;
 }
-.container ul li a{
-  text-decoration: none;/* 連結去底線 */
-  color: #000000;
-  font-weight: bold;/* 粗體文字 */
+.user-avatar-area{
+  position: absolute;
+  height: 100%;
+  width: 500px;
+  background-color: aquamarine;
 }
-
-/* 個人資料框 */
-.account-settings .user-profile {
-  margin: 0 0 1rem 0;
-  padding-bottom: 1rem;
-  text-align: center;
+.user-avatar{
+  position: absolute;
+  top: 100px;
+  left: 150px;
 }
-.account-settings .user-profile .user-avatar {
-  margin: 0 0 1rem 0;
+.select{
+  position: absolute;
+  left: 10px;
+  top: 250px;
 }
-.account-settings .user-profile .user-avatar img {
-  width: 90px;
-  height: 90px;
-  -webkit-border-radius: 100px;
-  -moz-border-radius: 100px;
-  border-radius: 100px;
-}
-.account-settings .user-profile h5.user-name {
-  margin: 0 0 0.5rem 0;
-}
-.account-settings .user-profile h6.user-email {
-  margin: 0;
-  font-size: 0.8rem;
-  font-weight: 400;
-  color: #9fa8b9;
-}
-.account-settings .about {
-  margin: 2rem 0 0 0;
-  text-align: center;
-}
-.account-settings .about h5 {
-  margin: 0 0 15px 0;
-  color: #007ae1;
-}
-.account-settings .about p {
-  font-size: 0.825rem;
-}
-.form-control {
-  border: 1px solid #cfd1d8;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  border-radius: 2px;
-  font-size: .825rem;
-  background: #ffffff;
-  color: #2e323c;
-}
-
-.card {
-  background: #ffffff;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  border: 0;
-  margin-bottom: 1rem;
+.user-PI-area{
+  position: absolute;
+  height: 100%;
+  width: 1300px;
+  left: 700px;
+  top: 50px;
+  
 }
