--- a/大專/報團頁面.css
+++ b/大專/報團頁面.css
@@ -1,15 +1,55 @@
-:root,
-[data-bs-theme=light] {
---bs-tertiary-bg-rgb:255,255,255;/* 導覽列背景顏色 */
---bs-link-color:#000000;  /* 導覽列文字顏色 */
-}
-.navbar{
-    --bs-navbar-brand-font-size:1.25rem;/* LOGO字體大小 */
-    
-}
-.nav-link {
-    --bs-nav-link-font-size:20px;/* 導覽列文字大小 */
-}
+*{/* 位置滿版 */
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box; 
+  }
+  /* 導覽列 */
+  .main-header{
+    position:sticky;
+    top: 0px;
+    width: 100%;
+    z-index: 999;/* 將導覽列的層級 */
+  }
+  .container{
+    display: flex;/* 並排 */
+    padding: 5px;
+    max-width: 100%;
+    margin: auto;/* 將覽導列自動放到正中間 */
+    align-items: center;/* 容器內所有項目對齊中間 */
+    background-color: rgba(253, 253, 253, 0.4);/* 導覽列透明0~1之間 */
+    text-shadow: 0px 0px 1px #ffffff;/* 文字外框 */
+  }
+  .main-header .Logo{
+    width: 50px;
+    display: flex;/* 並排Logo & 文字 */
+    text-decoration: none;/* 連結去底線 */
+    font-family:Franklin Gothic Medium;/* 字型 */
+  }
+  .main-header .Logo img{
+    width: 100%;
+    vertical-align: middle;/* 垂直對齊：中間 */
+  }
+  .Logo h2{
+    margin-left: 5px;
+    font-size: 2em;
+    color: #000000;
+    text-shadow: 2px 0px 0px #f6a122;/* 文字外框 */
+  }
+  
+  .navbar-text{
+    margin: auto;/* 把空間分配給類別內的值 */
+    font-size: 24px;
+    font-family: 'Noto Sans JP', sans-serif;/* 預設樣式中文字 */
+  }
+  .navbar-text a{
+    text-decoration: none;/* 連結去底線 */
+    padding-left: 30px;/* 連結的左邊空間+30px */
+    padding-right: 30px;/* 連結的右邊空間+30px */
+    color: rgb(0, 0, 0);
+  }
+  .navbar-text a:hover{
+    border-bottom:5px solid #FFDEAD;
+  }
 .card{
     display: inline-block;
 }
