--- a/FinalProWeb/src/main/webapp/css/login.css
+++ b/FinalProWeb/src/main/webapp/css/login.css
@@ -1,71 +1,9 @@
-*{/* 位置滿版 */
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box; 
-}
-/* 導覽列 */
-.main-header{
-  position:fixed;
-  top: 0px;
-  width: 100%;
-  z-index: 999;/* 將導覽列的層級 */
-}
-.container{
-  display: flex;/* 並排 */
-  padding: 5px;
-  padding-right: 0px;
-  max-width: 100%;
-  margin: auto;/* 將覽導列自動放到正中間 */
-  align-items: center;/* 容器內所有項目對齊中間 */
-  background-color: rgba(130, 130, 130, 0.8);/* 導覽列透明0~1之間 */
-  text-shadow: 0px 0px 1px #ffffff;/* 文字外框 */
-}
-.main-header .Logo{
-  width: 50px;
-  display: flex;/* 並排Logo & 文字 */
-  text-decoration: none;/* 連結去底線 */
-  font-family:Franklin Gothic Medium;/* 字型 */
-}
-.main-header .Logo img{
-  width: 100%;
-  vertical-align: middle;/* 垂直對齊：中間 */
-}
-.Logo h2{
-  margin-left: 5px;
-  font-size: 2em;
-  color: #ffffff;
-  text-shadow: 2px 0px 0px #f6a122;/* 文字外框 */
-}
-
-.navbar-text{
-  margin: auto;/* 把空間分配給類別內的值 */
-  font-size: 24px;
-  font-family: 'Noto Sans JP', sans-serif;/* 預設樣式中文字 */
-}
-
-.navbar-text a{
-  border-radius: 20px;/* 邊框圓弧度 */
-  text-shadow: 1px 1px 0 rgb(4, 4, 4); /* 设置文字陰影，颜色為红色，水平偏移量為 1 像素，垂直偏移量為 1 像素 */
-  text-decoration: none;/* 連結去底線 */
-  padding-left: 30px;/* 連結的左邊空間+30px */
-  padding-right: 30px;/* 連結的右邊空間+30px */
-  color: rgb(255, 255, 255);
-}
-.navbar-text a:hover{
-  border: 1px solid #ffe2d3cb; /* 設置邊框為 1 像素實線黑色 */
-  background-color: rgb(147, 147, 147);
-  color: #ffffff;
-}
-.navbar-nav{
-  margin-right: 70px;
-}
-/* ------------------------ */
+/* login */
   body{
-    background-image:url(./Images/img13.jpg);/* 將圖片設成背景 */
+    background-image:url(../Images/img13.jpg);/* 將圖片設成背景 */
     background-size: cover;  /* 背景圖片按比例放大，填滿整個元素 */
     background-repeat: no-repeat;  /* 防止背景圖片重複顯示 */
     height: 100vh;/* 使body元素佔據整個視窗高度,1vh等於視窗高度的1% */
-    
   }
   .wrapper{
     position:relative;/* 父元素 */
@@ -87,7 +25,7 @@
     display: flex;/* 設定到最中間 */
     justify-content: center;/* 水平置中 */
     align-items: center;/* 垂直置中 */
-    margin-top: 10px;
+    margin-top: 50px;
     overflow: hidden;/* 登入超出視窗隱藏 */
   }
   .wrapper .active{
