--- a/FinalProWeb/src/main/webapp/css/login.css
+++ b/FinalProWeb/src/main/webapp/css/login.css
@@ -68,6 +68,9 @@
   .form .group{
     margin-bottom: 20px;
   }
+  .form .group label{
+    font-family: 'Noto Sans JP', sans-serif;/* 預設樣式中文字 */
+  }
   .form .btn-group{
     margin-top: 30px;
   }
