--- a/FinalProWeb/src/main/webapp/css/navbar&footer.css
+++ b/FinalProWeb/src/main/webapp/css/navbar&footer.css
@@ -2,6 +2,12 @@
     margin: 0;
     padding: 0;
   }
+  .wrapper{
+    width: 100%;
+    height: 1000px;
+    z-index: -1;
+    background-color: #ffffff;
+  }
   /* 導覽列 */
   .main-header{
     top: 0px;
@@ -14,8 +20,9 @@
     padding-right: 0px;
     max-width: 100%;
     margin: auto;/* 將覽導列自動放到正中間 */
+    text-align: center;
     align-items: center;/* 容器內所有項目對齊中間 */
-    background-color: rgb(255, 175, 94);/* 導覽列透明0~1之間 */
+    background-color: rgb(255, 175, 94);
     text-shadow: 0px 0px 1px #ffffff;/* 文字外框 */
   }
   .main-header .container .Logo{
@@ -37,6 +44,9 @@
     color: #ffffff;
     font-family: 'Noto Sans JP', sans-serif;/* 文字樣式 */
     text-shadow: 2px 0px 0px #f6a122;/* 文字外框 */
+    display: flex;
+    text-align: center;
+    align-items: center;
   }
   
   .navbar-text{
@@ -63,15 +73,9 @@
   }
   /* ---------------------------------- */
 
-  .wrapper{
-    width: 100%;
-    height: 1000px;
-    z-index: -1;
-    background-color: #ffffff;
-  }
   /* 頁尾 */
   footer {
-      background-color: #ffefde;
+      background-color: rgb(255, 175, 94);
       padding: 20px;
       text-align: center;/* 文字置中 */
       position:relative;
