--- a/FinalProWeb/src/main/webapp/css/sidebar.css
+++ b/FinalProWeb/src/main/webapp/css/sidebar.css
@@ -359,20 +359,24 @@ display: block;
   height: 100%;
   width: 400px;
   border-right:1px solid ;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .member-avatar{
   position: absolute;
   top: 100px;
-  left: 100px;
 }
-.member-avatar .text-center img{
+.member-avatar .text-center .avatar{
   /* 將圖片框變為圓形 */
   border-radius: 50%;
+  width: 250px;
+  height: 250px;
 }
 .select{/* 更換頭像按鈕 */
   position: absolute;
   left: 10px;
-  top: 250px;
+  top: 300px;
 }
 .member-area{
   position: absolute;
