--- a/FinalProWeb/src/main/webapp/css/index.css
+++ b/FinalProWeb/src/main/webapp/css/index.css
@@ -1,4 +1,3 @@
-
 /* 輪播圖 */
 .slide-pic{
     /* 輪播圖大小 */
@@ -14,7 +13,7 @@
     background-color:#f7d095;
     font-weight: bold;/* 粗體文字 */
 }
-.words{
+.carousel-inner .words{
     color: aliceblue;
     font-size: 80px;
     font-family: Impact, fantasy;
@@ -25,7 +24,7 @@
     text-shadow: 0px 0px 10px #f6a122;/* 文字外框 */
     
 }
-.words2{
+.carousel-inner .words2{
     color: aliceblue;
     font-size: 80px;
     font-family: Impact, fantasy;
@@ -35,7 +34,7 @@
     left: 20%;
     text-shadow: 0px 0px 10px #f6a122;/* 文字外框 */
 }
-.words3{
+.carousel-inner .words3{
     color: aliceblue;
     font-size: 80px;
     font-family: Impact, fantasy;/* 字體樣式 */
