--- a/FinalProWeb/src/main/webapp/css/login.css
+++ b/FinalProWeb/src/main/webapp/css/login.css
@@ -4,7 +4,7 @@
     background-size: cover;  /* 背景圖片按比例放大，填滿整個元素 */
     background-repeat: no-repeat;  /* 防止背景圖片重複顯示 */
     height: 100vh;/* 使body元素佔據整個視窗高度,1vh等於視窗高度的1% */
-    
+    font-family: 'Noto Sans HK', sans-serif;
   }
   .wrapper{
     position:relative;/* 父元素 */
@@ -48,15 +48,11 @@
   }
   .form h1{
     margin-bottom: 50px;
-    font-family:Franklin Gothic Medium;/* 字型 */
-    font-family: 'Noto Sans JP', sans-serif;/* 預設樣式中文字 */
     text-align: center;
   }
   .form h2{
     margin-top: -10px ;
     margin-bottom: 40px;
-    font-family:Franklin Gothic Medium;/* 字型 */
-    font-family: 'Noto Sans JP', sans-serif;/* 預設樣式中文字 */
   }
   .form input{
     width: 100%;
@@ -67,9 +63,6 @@
   }
   .form .group{
     margin-bottom: 20px;
-  }
-  .form .group label{
-    font-family: 'Noto Sans JP', sans-serif;/* 預設樣式中文字 */
   }
   .form .btn-group{
     margin-top: 30px;
@@ -93,7 +86,6 @@
   .form p{
     margin-top: 20px;
     font-size: 20px;
-    font-weight: bold;
   }
   .form p a{
     margin-left: 10px;
@@ -112,7 +104,6 @@
     transition: none;
     /* display: none;   */
     font-size: 20px;
-    font-weight: bold;
   }
   .wrapper .active .register{
     transition: transform .2s ease;/* transition過渡0.2秒緩衝 */
