--- a/FinalProWeb/src/main/webapp/css/navbar&footer.css
+++ b/FinalProWeb/src/main/webapp/css/navbar&footer.css
@@ -1,6 +1,7 @@
 *{/* 位置滿版 */
     margin: 0;
     padding: 0;
+    font-family: 'Noto Sans HK', sans-serif;
   }
   .wrapper{
     width: 100%;
@@ -40,9 +41,8 @@
     margin-left: 5px;
     height: 50px;
     width: 70px;
-    font-size: 2em;
+    font-size: 1.5em;
     color: #ffffff;
-    font-family: 'Noto Sans JP', sans-serif;/* 文字樣式 */
     text-shadow: 2px 0px 0px #f6a122;/* 文字外框 */
     display: flex;
     text-align: center;
@@ -52,7 +52,6 @@
   .navbar-text{
     margin: auto;/* 把空間分配給類別內的值 */
     font-size: 24px;
-    font-family: 'Noto Sans JP', sans-serif;/* 預設樣式中文字 */
   }
   
   .navbar-text a{
@@ -93,7 +92,6 @@
     }
     
     .footer-section h4 {
-      font-size: 18px;
       margin-bottom: 10px;
     }
     
