--- a/FinalProWeb/src/main/webapp/css/navbar&footer.css
+++ b/FinalProWeb/src/main/webapp/css/navbar&footer.css
@@ -32,21 +32,22 @@
     display: flex;/* 並排Logo & 文字 */
     text-decoration: none;/* 連結去底線 */
   }
-  .main-header .Logo img{
+  .container .Logo img{
     width: 50px;
     height: 50px;
     vertical-align: middle;/* 垂直對齊：中間 */
   }
-  .Logo h2{
+  .container .Logo h2{
     margin-left: 5px;
     height: 50px;
     width: 70px;
-    font-size: 1.75em;
+    font-size: 2em;
     color: #ffffff;
     text-shadow: 2px 0px 0px #f6a122;/* 文字外框 */
     display: flex;
     text-align: center;
     align-items: center;
+    font-family: 'Rock Salt', cursive;
   }
   
   .navbar-text{
@@ -63,8 +64,8 @@
     color: #fffaf7;
   }
   .navbar-text a:hover{
-    border: 1px solid #ffe2d3cb; /* 設置邊框為 1 像素實線黑色 */
-    background-color: rgb(189, 189, 189);
+    border: 1px solid #000000cb; /* 設置邊框為 1 像素實線黑色 */
+    background-color: rgb(255, 119, 0);
     color: #ffffff;
   }
   .navbar-nav{
