--- a/FinalProWeb/src/main/webapp/css/sidebar.css
+++ b/FinalProWeb/src/main/webapp/css/sidebar.css
@@ -342,8 +342,9 @@ display: block;
   display: flex;
   height: 100vh; /* 也可以使用固定高度 */
 }
+
 .PI{
-  background-color:rgb(254, 254, 254);
+  background-color:rgba(255, 255, 255, 0.9);
   position: absolute;/* 子元素 */
   width: 1600px;
   height: 800px;
@@ -351,15 +352,20 @@ display: block;
   justify-content: center;/* 水平置中 */
   align-items: center;/* 垂直置中 */
   border:1px solid ;
+  border-radius: 15px;/* 邊框圓弧度 */
+  box-shadow: 0 0 10px #000000;/* shadow陰影 */
+  backdrop-filter: blur(1px);/* 毛玻璃效果 */
 }
 .member-avatar-area{
   position: absolute;
   height: 100%;
   width: 400px;
-  border-right:1px solid ;
   display: flex;
   justify-content: center;
   align-items: center;
+  border-right: 1px solid ;
+  border-bottom-left-radius: 15px;
+  border-top-left-radius: 15px;
 }
 .member-avatar{
   position: absolute;
@@ -379,9 +385,11 @@ display: block;
 .member-area{
   position: absolute;
   height: 100%;
-  width: 1200px;
+  width: 1198px;
   left: 400px;
-  background-color: rgb(135, 195, 248);
+  background-color: rgba(254, 152, 50, 0.8);
+  border-bottom-right-radius: 15px;
+  border-top-right-radius: 15px;
 }
 .member{
   position: absolute;
@@ -389,6 +397,7 @@ display: block;
   width: 1100px;
   margin: 50px;
   background-color: rgb(255, 255, 255);
+  border-radius: 15px;/* 邊框圓弧度 */
   border:1px solid ;
   font-family: 'Noto Sans HK', sans-serif;
   font-size: 20px;
@@ -413,8 +422,13 @@ display: block;
 .btn-group button{
   margin-right: 100px;
   border-radius: 10px;
+  width: 150px;
+  border: none;/* 去邊框 */
+  background-color: #ffbf71;
 }
-
+.btn-group button:hover{
+  background-color: #faa21d;
+}
 .container-calendar{
   position: relative;/* 父元素 */
   justify-content: center;/* 水平置中 */
