--- a/FinalProWeb/src/main/webapp/css/sidebar.css
+++ b/FinalProWeb/src/main/webapp/css/sidebar.css
@@ -399,6 +399,9 @@ display: block;
   height: 80px;
   font-size: 22px;
 }
+.member .project button{
+  margin-right: 50px;
+}
 .member .project label{
   width: 120px;
 }
@@ -412,13 +415,14 @@ display: block;
   margin-bottom: 40px;
 }
 .btn-group{
-  width: 100%;
-  padding-top: 30px;
+  left: 350px;
   justify-content: center;/* 水平置中 */
 }
 .btn-group button{
-  margin-left: 200px;
+  margin-top: 50px;
+  margin-right:50px ;
   width: 150px;
+  height: 35px;
 }
 
 .container-calendar{
